--- a/src/app/views/warehouse/budget-key/components/budget-key-show/budget-key-show.component.html
+++ b/src/app/views/warehouse/budget-key/components/budget-key-show/budget-key-show.component.html
@@ -42,33 +42,33 @@
                             <div class="col-sm-12">
                                 <div class="form-group">
                                     <label for="">Subdirección</label>
-                                     <input type="text" class="form-control" [value]="budgetKey.subdirectionId"> 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="col-sm-12 col-md-4">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <label for="">Programa</label>
-                                    <textarea name="" id="" cols="2" rows="2" class="form-control">{{ budgetKey.programId }}</textarea>
+                                     <input type="text" class="form-control" [value]="budgetKey.subdirection.name"> 
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-md-4">
+                    <div class="col-sm-12 col-md-4">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-12" >
+                                    <div class="form-group">
+                                        <label for="">Programa</label>
+                                        <textarea name="" id="" cols="2" rows="2" class="form-control">{{ budgetKey.program.description }}</textarea>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-sm-12 col-md-4">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label for="">Proyecto</label>
-                                        <textarea name="" id="" cols="2" rows="2" class="form-control">{{ budgetKey.projectId }}</textarea>
+                                        <textarea name="" id="" cols="2" rows="2" class="form-control">{{ budgetKey.project.description }}</textarea>                                        
                                     </div>
                                 </div>
                             </div>
@@ -87,11 +87,6 @@
                             <div class="col-sm-12 col-md-12">
                                 <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
                                 [rowHeight]="50" [scrollbarV]="true" [rows]="budgetKey.budget_key_details">
-                                <!-- Gracias a que ya viene el objecto con un array de todos sus detalles, simplemente haces referencia
-                                al array como si fuera una propiedad de budgetKey. Es decir 'budgetKey.budget_key_details'. '.budget_key_details' es el array. 
-                                Al final cuando veas cómo funciona todos los cambios que hice, BORRAR LOS COMENTARIOS, POR FIS JIJI
-                              -->
-                                    
                                     <ngx-datatable-column [minWidth]="100" [maxWidth]="150"name="ID" prop="id" width="100">
                                       <ng-template let-value="value" ngx-datatable-cell-template>
                                         <strong>{{value}}</strong>
@@ -104,7 +99,7 @@
                                       </ng-template>
                                     </ngx-datatable-column>
                               
-                                    <ngx-datatable-column [minWidth]="100" [maxWidth]="100" name="Objetivos pi" prop="description" width="250">
+                                    <ngx-datatable-column [minWidth]="300" [maxWidth]="800" name="Objetivos pi" prop="description" width="250">
                                       <ng-template let-value="value" ngx-datatable-cell-template>
                                         <strong>{{value}}</strong>
                                       </ng-template>
