--- a/src/app/views/warehouse/concept/components/concept-create/concept-create.component.html
+++ b/src/app/views/warehouse/concept/components/concept-create/concept-create.component.html
@@ -12,6 +12,20 @@
             <div class="row">
               <div class="col-sm-12">
                 <div class="form-group">
+                  <label for="description">Número de partida</label>
+                  <input ngModel name="numberConcept" #numberInput #number="ngModel" type="number" class="form-control" placeholder="Ingrese número de partida..." required min=0>
+                  <ul *ngIf="number.invalid && (number.dirty || number.touched)" class="alert alert-danger" style="margin-top: .5em">
+                    <li *ngIf="number.errors.required"> Debes ingresar un <strong>número</strong> </li>
+                  </ul>
+                </div>
+              </div>
+            </div><!--/.row-->
+    
+
+
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="form-group">
                   <label for="description">Descripción</label>
                   <input ngModel name="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese una descripción..." required minlength="2">
                   <ul *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger" style="margin-top: .5em">
