--- a/src/app/views/warehouse/provider/components/provider-edit/provider-edit.component.html
+++ b/src/app/views/warehouse/provider/components/provider-edit/provider-edit.component.html
@@ -12,27 +12,32 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="form-group">
+
                     <label for="name">Nombre</label>
                     <input [(ngModel)]="provider.name" name="name" #nameInput #name="ngModel" type="text" class="form-control" placeholder="Ingrese el nombre de un proveedor..." required minlength="2">
                     <ul *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger" style="margin-top: .5em">
                         <li *ngIf="name.errors.required"> Debes ingresar un <strong>nombre</strong> </li>
                         <li *ngIf="name.errors.minlength"> Debes ingresar un nombre como mínimo de <strong> {{ name.errors.minlength.requiredLength }} </strong> caracteres </li>
                     </ul>
+
                     <label for="phone">Telefono</label>
                     <input [(ngModel)]="provider.phone" name="phone" #phoneInput #phone="ngModel" type="text" class="form-control" placeholder="Ingrese el teléfono de un proveedor..." minlength="7">
                     <ul *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="alert alert-danger" style="margin-top: .5em">
                         <li *ngIf="phone.errors.minlength"> Debes ingresar un teléfono como mínimo de <strong> {{ phone.errors.minlength.requiredLength }} </strong> caracteres </li>
                     </ul>
+
                     <label for="address">Dirección</label>
                     <input [(ngModel)]="provider.address" name="address" #addressInput #address="ngModel" type="text" class="form-control" placeholder="Ingrese la dirección de un proveedor..." minlength="5">
                     <ul *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger" style="margin-top: .5em">
                         <li *ngIf="address.errors.minlength"> Debes ingresar una dirección como mínimo de <strong> {{ address.errors.minlength.requiredLength }} </strong> caracteres </li>
                     </ul>
+
                     <label for="email">E-mail</label>
-                    <input [(ngModel)]="provider.email" name="email" #emailInput #email="ngModel" type="email" class="form-control" placeholder="Ingrese el e-mail de un proveedor..." minlength="5">
+                    <input [(ngModel)]="provider.email" name="email" #emailInput #email="ngModel" type="email" class="form-control" placeholder="Ingrese el e-mail de un proveedor..." [pattern]="emailPattern">
                     <ul *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger" style="margin-top: .5em">
-                        <li *ngIf="email.errors.minlength"> Debes ingresar un correo como mínimo de <strong> {{ email.errors.minlength.requiredLength }} </strong> caracteres </li>
+                        <li *ngIf="email.errors.pattern"> Debes de ingresar un correo  <strong> valido </strong> </li>
                     </ul>
+                    
                   </div>
                 </div>
               </div><!--/.row-->
