--- a/src/app/views/warehouse/provider/components/providers/providers.component.html
+++ b/src/app/views/warehouse/provider/components/providers/providers.component.html
@@ -43,16 +43,8 @@
           <div class="container scrollable-div">
             <div class="row">
 
-              <div class="col-md-2">
-                <div class="form-group">
-                  <label for="id" class="col-md-2 col-form-label">ID:</label>
-                  <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.id }}"/>
-                </div>
-              </div>
-        
-              
               <div class="col-md-7">
-                <label for="nombre" class="col-md-2 col-form-label">Nombre de departamento:</label>
+                <label for="nombre" class="col-md-2 col-form-label">Nombre de proveedor:</label>
                 <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.name }}"/>
               </div>
                 
@@ -104,27 +96,34 @@
           </a>
         </ng-template>
       </ngx-datatable-column>
-  
-      <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
-      <ngx-datatable-column [minWidth]="100" name="ID" prop="id" width="100">
-        <ng-template let-value="value" ngx-datatable-cell-template>
-          <strong>{{value}}</strong>
-        </ng-template>
-      </ngx-datatable-column>
-  
+      
       <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
       <ngx-datatable-column [minWidth]="250" name="Nombre" prop="name" width="250">
         <ng-template let-value="value" ngx-datatable-cell-template>
           <div class="break-word"> <strong>{{value}}</strong> </div>
         </ng-template>
       </ngx-datatable-column>
+      
+      <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+      <ngx-datatable-column [minWidth]="100" [maxWidth]="200" name="Teléfono" prop="phone" width="100">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <strong>{{value}}</strong>
+        </ng-template>
+      </ngx-datatable-column>
 
       <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
-      <ngx-datatable-column [minWidth]="150" name="Dirección" prop="address" width="150">
+      <ngx-datatable-column [minWidth]="150" [maxWidth]="250" name="Dirección" prop="address" width="150">
         <ng-template let-value="value" ngx-datatable-cell-template>
           <div class="break-word"> <strong>{{value}}</strong> </div>
         </ng-template>
       </ngx-datatable-column>
+
+      <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+      <ngx-datatable-column [minWidth]="150" [maxWidth]="250" name="Correo electrónico" prop="email" width="150">
+          <ng-template let-value="value" ngx-datatable-cell-template>
+            <div class="break-word"> <strong>{{value}}</strong> </div>
+          </ng-template>
+        </ngx-datatable-column>
     </ngx-datatable>
   </div>
 </div>
