--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,4 +1,11 @@
 <footer class="app-footer">
-  <span><a href="http://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="http://coreui.io">CoreUI</a></span>
+  <div class="container pt-3 pb-3">
+    <a href="#">
+        ITCG's Purchase System
+    </a>© 2018 2Tall2Short
+
+    <div class="s-content-footer-right">
+        Powered by <a href="#">ITCG's Purchase System</a>
+    </div>
+</div>
 </footer>
